--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,3 +1,36 @@
-html {
-    background-color : grey;
+body {
+    background-image: url(/img/login.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+fieldset{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: medium;
+    color : black;
+    margin-top: 210px;
+    margin-left: 10px;
+    margin-right: 870px;
+    border: 2px solid rgb(37, 7, 10);
+    padding: 20px;
+}
+
+legend{
+    font-size: large;
+    font-weight: bold;
+    color:rgb(56, 9, 7);
+    font-style: italic;
+}
+
+.link{
+    font-weight: bold;
+    color: black; 
+}
+
+button{
+    font-size: large;
+    border-radius: 10px;
+    font-weight: bold;
+    background-color: pink;
+    font-style: italic;
 }
