--- a/template/partials/header.hbs
+++ b/template/partials/header.hbs
@@ -1,5 +1,22 @@
-<header>
-    <h1>{{title}}</h1>
-    <div>
-        <p>GLOBAL CONNECT PARTIALS</p>
+<header> 
+    <h1>WELCOME TO ADMIN SITE</h1>
+    <div class="header">
+        <h2><i class="fa fa-globe"></i>Global connect
+            <button class="logout" id="logoutbtn">Logout</button>
+        </h2>
+    </div>
+
+    <div class="sidebar">
+        <li><span class="links"><i class="fa fa-home" aria-hidden="true"></i> <button id="homebtn">HOME</button></span></li>
+        <li><span class="links"><i class="fa fa-id-badge" aria-hidden="true"></i> <button
+                    id="adminbtn">ADMIN</button></span></li>
+        <li><span class="links"><i class="fa fa-user-circle-o" aria-hidden="true"></i> <button
+                    id="vendorbtn">VENDOR</button></span></li>
+        <li><span class="links"><i class="fas fa-users" aria-hidden="true"></i> <button id="userbtn">USER</button></span>
+        </li>
+        <li><span class="links"><i class="fab fa-product-hunt" aria-hidden="true"></i> <button
+                    id="productbtn">PRODUCT</button></span></li>
+        <li><span class="links"><i class="fab fa-adversal" aria-hidden="true"></i> <button
+                    id="adbtn">ADVERTISEMENT</button></span></li>
+    </div>
 </header>
