--- a/template/views/home.hbs
+++ b/template/views/home.hbs
@@ -1,17 +1,15 @@
 <html>
     <head>
         <title>HOME PAGE</title>
+        <link rel="stylesheet" href="/css/home.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://kit.fontawesome.com/2b98a38ab2.js" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="/public/js/home.js"></script>
+        <script src="/js/home.js"></script>
     </head>
+
     <body>
-        <div class="sidenav">
-            <a href="#home">Home</a>
-            <a href="#Admin">Admin</a>
-            <a href="#vendor">Vendor</a>
-            <a href="#user">User</a>
-            <a href="#product">Product</a>
-            <a href="#ad">Ad</a>
-        </div>
+        {{>header}}
+        <h3>Global connect's Admin page</h3>
     </body>
 </html>
