--- a/template/views/login.hbs
+++ b/template/views/login.hbs
@@ -17,8 +17,8 @@
             <input type="checkbox" id="rememberme">
             <label>Remember me</label><br><br>
             <button id="loginBtn">Login</button><br><br>
-            <a class="link" href="/forgot" id="forgot">Forgot password</a><br><br>
-            <a class="link" href="/register" id="register">Register here</a>
+            <a class="link" href="/forgot" id="forgot">Forgot password</a>
+            <a class="linkreg" href="/register" id="register">Register here</a>
         </fieldset>
     </body>
 </html>
