--- a/template/views/register.hbs
+++ b/template/views/register.hbs
@@ -15,7 +15,7 @@
             <input type="password" id="repassword"><br><br>
             <input type="checkbox" id="showpwd"><b>Show password</b><br><br>
             <button type="submit" id="regBtn">Register</button><br><br>
-            <a class="link" href="http://localhost:3000/login">Back to login page
+            <a class="link" href="http://localhost:3000/">Back to login page
         </div>
     </body>
 </html>
