--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,85 +1,127 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
-
-    background-color: rgba(77, 71, 71, 0.849);
+body {
+    background-color: lightblue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 h1{
-    text-align: center;
-    font-family: 'Original Surfer', cursive;
-    padding-bottom: 40px;
-    color: red;
+    padding: 10px;
     background-color: black;
+    text-align: center;
+    padding-bottom: 40px;
+    color: magenta;
     padding: 20px 20px;
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid blueviolet;
 }
+
 h2{
     text-align: center;
-    font-family: 'Zen Dots', cursive;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding-bottom: 40px;
-    color: red;
+    color: magenta;
     padding: 20px 20px;
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid blueviolet;
+    background-color:black;
 }
-#sidebar{
+
+.logout{
+    font-size: x-large;
+    border-radius: 10px;
+    font-weight: bold;
+    color : magenta;
+    background-color: black;
+    margin-left: 870px;
+    font-style: italic;
+}
+
+.sidebar{
     position: fixed;
     width: 200px;
     height: 100%;
     background-color: black;
+    width: 250px;
 }
-#sidebar ul li{
+
+li{
     list-style: none;
     padding: 20px 20px;
-    border-bottom: 2px solid white;
-    font-family: 'Zen Dots', cursive;
-    color: red;
-
-}
-#sidebar ul li:hover{
-    background-color: red;
-    color: black;
-
+    border-bottom: 2px solid blueviolet ;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: blue;
+    border-right-width: 0px ;
+    width: 200px;
 }
 
-.logout{
-    margin-left: 800px;
-    color: white;
-    background-color: firebrick;
-    font-size: large;
-    border-radius: 10px;
+nav{
+    height: 100vh;
+    width: 250px;
+    position: fixed;
+    z-index: 1;
+    top: 140px;
+    background-color: rgb(39, 39, 39);
+    overflow: auto;
+    height: 100%;
 }
-span{
-    color: rgb(85, 204, 91);
+
+.links {
+    display: block;
+    color: rgb(178, 137, 253);
+    text-decoration: none;
+    font-size: 17px;
 }
+
+li:hover {
+    background-color: blue;
+}
+
 button{
-    background-color: black;
-    color: red;
-    font-family: 'Zen Dots', cursive;
-}
-.header{
-    background-color: black;
-}
-p{
-    margin-left: 230px;
-    color: chartreuse;
+    font-size: large;
+    border-radius: 20px;
     font-weight: bold;
-    font-style: italic;
+    background-color: magenta;
 }
-input{
+
+.deletebtn{
+    font-size: x-large;
+    margin-top: 80px;
+    color : black;
     margin-left: 300px;
-    margin-top: 50px;
-    font-size: xx-large;
-    color: red;
-    background-color: black;
-    border-radius: 10px;
-    border-color: white;
 }
-input:hover{
-    background-color: red;
-    color: black;
+
+.addbtn{
+    font-size: x-large;
+    margin-top: 80px;
+    color : black;
+    margin-left: 350px;
+}
+
+.editbtn{
+    font-size: x-large;
+    margin-top: 80px;
+    color : black;
+    margin-left: 400px;
+}
+
+table{
+    font-size: x-large;
+    margin-top: 50px;
+    color : black;
+    margin-left: 300px;
+    background-color: magenta;
+}
+
+th{
+    color:maroon;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+td{
+    color:black;
+    padding-left: 50px;
+    padding-right: 50px;
 }
